syntax = "proto3";

option java_package = "dev.android.play";
option java_multiple_files = true;

message UserStore {
    bool is_logged_in = 1;
    string user_name = 2;
}